Day06 집에서 수정

--- a/kakaomap/index.html
+++ b/kakaomap/index.html
@@ -57,6 +57,7 @@
 
 
 		// 지도에 클릭 이벤트를 등록합니다
+		/* 수정본 */
 		// 지도를 클릭하면 마지막 파라미터로 넘어온 함수를 호출합니다
 		kakao.maps.event.addListener(map, 'click', function(mouseEvent) {        
 			
